OpenVDB only renders inside Density-Bounds #79718

Closed
opened 2020-08-11 20:05:51 +02:00 by Korbinian Weber · 6 comments

System Information
Operating system: Windows 10 1909
Graphics card: Titan RTX

Blender Version
Broken: 2.83.3, 2.90.0 Beta

Short description of error
When importing OpenVDB-Files that also store flames, flames are only rendered inside of the boundaries of the density-data.

Exact steps for others to reproduce the error
Import the attached file into blender, add a principled shader, enable Blackbody Emission and preview frame 5-10.
Manually building a shader doesn't work either.
Also, Eevee behaves kinda weird in the first few frames

OpenVDB-sequence
Explosion1.rar

Bug1.PNG

Bug2.PNG

Bug4.PNG

Bug3.PNG

**System Information** Operating system: Windows 10 1909 Graphics card: Titan RTX **Blender Version** Broken: 2.83.3, 2.90.0 Beta **Short description of error** When importing OpenVDB-Files that also store flames, flames are only rendered inside of the boundaries of the density-data. **Exact steps for others to reproduce the error** Import the attached file into blender, add a principled shader, enable Blackbody Emission and preview frame 5-10. Manually building a shader doesn't work either. Also, Eevee behaves kinda weird in the first few frames OpenVDB-sequence [Explosion1.rar](https://archive.blender.org/developer/F8770180/Explosion1.rar) ![Bug1.PNG](https://archive.blender.org/developer/F8770187/Bug1.PNG) ![Bug2.PNG](https://archive.blender.org/developer/F8770188/Bug2.PNG) ![Bug4.PNG](https://archive.blender.org/developer/F8770189/Bug4.PNG) ![Bug3.PNG](https://archive.blender.org/developer/F8770190/Bug3.PNG)

Added subscriber: @WhitecloudFX

Added subscriber: @WhitecloudFX

Closed as duplicate of #77882

Closed as duplicate of #77882

This issue was referenced by 6f502136c7

This issue was referenced by 6f502136c7fd5d2d115ac28095fb176b72bc1ad6

Changed status from 'Duplicate' to: 'Resolved'

Changed status from 'Duplicate' to: 'Resolved'

This issue was referenced by ea2d025a98

This issue was referenced by ea2d025a98481e372412940f49a489fa015e1851

This issue was referenced by e7d3d0219b

This issue was referenced by e7d3d0219b39ef5e8ff0308ef7dc6463770daca2
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79718
No description provided.