Fix T79718: Eevee OpenVDB render error when frames miss part of the grids

Improved fix that handles the distinct cases of missing grids and zero
size grids.